fix slash bug, show -- instead of not found, add Anmerkungen to Galvanik report

--- a/galvanik/report_all.html
+++ b/galvanik/report_all.html
@@ -27,8 +27,8 @@
   </const>
 </table>
 
-<!--h3>Folgende Punkte wurden rückgemeldet:</h3>
-<p>%a4:dataelements:change:feedback%</p-->
+<h3>Anmerkung:</h3>
+<p>%a4:dataelements:change:feedback%</p>
 <hr>
 <!--p style="page-break-after:always; "/-->
 <div class="header hidden-print">
